# ai-infra-engineer-solutions

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  CREATION_REPORT.md  CURRICULUM.md  CURRICULUM_INDEX.md  EXERCISE_SOLUTIONS_MAP.md  HOUSEKEEPING_REPORT.md  LEARNING_GUIDE.md  PROGRESS_TRACKER.md  QUICK_START_GUIDE.md  README.md  SESSION_SUMMARY_PHASE_5_COMPLETE.md  SOLUTIONS_INDEX.md  SOLUTIONS_SUMMARY.md  VALIDATION_SUMMARY.txt  VERSIONS.md  create_exercise_content.py  generate_solutions.py
.aicg/: audit-report.json  placeholder-cache.json  work-plan.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  repo-ci.yml
guides/: README.md  debugging-guide.md  optimization-guide.md  production-readiness.md
modules/mod-101-foundations/: README.md  SOLUTION.md
modules/mod-101-foundations/exercise-01-environment/: .pre-commit-config.yaml  README.md  pyproject.toml
modules/mod-101-foundations/exercise-01-environment/scripts/: verify-env.sh
modules/mod-101-foundations/exercise-04-python-env-manager/: .gitignore  README.md  STEP_BY_STEP.md  pyproject.toml  requirements-dev.txt  requirements.txt
modules/mod-101-foundations/exercise-04-python-env-manager/docs/: api.md
modules/mod-101-foundations/exercise-04-python-env-manager/scripts/: run.sh  setup.sh  test.sh
modules/mod-101-foundations/exercise-04-python-env-manager/src/pyenvman/: __init__.py  cli.py  dependency_resolver.py  project_init.py  python_detector.py  venv_manager.py
modules/mod-101-foundations/exercise-04-python-env-manager/tests/: conftest.py  test_python_detector.py
modules/mod-102-cloud-computing/: SOLUTION.md
modules/mod-103-containerization/: SOLUTION.md
modules/mod-104-kubernetes/: SOLUTION.md
modules/mod-105-data-pipelines/: SOLUTION.md
resources/: additional-materials.md
(+861 files in other folders)
